--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>This is just an entrypoint for the project pages. Here's the list:</p>
 
 <ul>
-<li>http://michielkauwatjoe.github.io/Gao</li>
+<li><a href="http://michielkauwatjoe.github.io/Gao">Gāo</a></li>
 </ul>
 
 
