--- a/index.html
+++ b/index.html
@@ -7,23 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="description" content="Michiel Kauw-A-Tjoe">
     <meta name="google-site-verification" content="xkAOrrpWLQfnf6ROsO-1UyfHGAxgrJ3pIQ_os16RnIE" />
-    <link rel="shortcut icon" href="https://michielkauwatjoe.com/images/avatar.ico"/>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="https://michielkauwatjoe.github.io/images/avatar.ico"/>
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="https://www.michielkauwatjoe.com/">
-{
-  "@context": "http://schema.org",
-  "@type": "Person",
-  "name": "Michiel Kauw-A-Tjoe",
-  "url": "http://www.michielkauwatjoe.com",
-  "sameAs": [
-    "http://instagram.com/michielkauwatjoe",
-    "http://www.twitter.com/in/mwkauwatjoe",
-    "http://michielkauwatjoe.tumblr.com",
-    "http://www.linkedin.com/in/michielkauwatjoe",
-    "http://plus.google.com/+Michielkauwatjoe1",
-    "http://soundcloud.com/michielkauwatjoe"
-  ]
-}
     </script>
 </head>
 
