--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michiel Kauw-A-Tjoe">
     <meta name="google-site-verification" content="xkAOrrpWLQfnf6ROsO-1UyfHGAxgrJ3pIQ_os16RnIE" />
     <link rel="shortcut icon" href="https://michielkauwatjoe.github.io/images/avatar.ico"/>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="canonical" href="https://www.michielkauwatjoe.com/">
     </script>
 </head>
@@ -25,7 +25,7 @@
 <div id="menucontent">
 
 <div id="menucontent1">
-<div class="menuitem"><a href="/index.html"><h3>about</h3></a></div>
+<div class="menuitem"><a href="/index.html"><h3>about 🐙</h3></a></div>
 </div>
 </div>
 </section>
@@ -34,72 +34,70 @@
 
 <section id="contentmover"></section>
 
-	<section id="content">
-	<div class="contentcenter">
+<section id="content">
+<div class="contentcenter">
 
-	    <h1>Projects</h1>
+    <h1>Projects</h1>
 
-            <h2>Software development</h2>
+        <h2>Software development</h2>
 
-            <p><ul type='disc'>
-                <li><a href="http://www.github.com/michielkauwatjoe">GitHub</a></li>
-                <li><a href="http://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
-            </ul></p>
+        <p><ul type='disc'>
+            <li><a href="http://www.github.com/michielkauwatjoe">GitHub</a></li>
+            <li><a href="http://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
+        </ul></p>
 
-            <h2>Illustration</h2>
+        <h2>Illustration</h2>
 
-            <p><ul type='disc'>
-                <li><a href="http://www.instagram.com/michielkauwatjoe">Instagram</a></li>
-                <li><a href="http://www.behance.net/michielkauwatjoe">Behance</a></li>
-            </ul></p>
+        <p><ul type='disc'>
+            <li><a href="http://www.instagram.com/michielkauwatjoe">Instagram</a></li>
+            <li><a href="http://www.behance.net/michielkauwatjoe">Behance</a></li>
+        </ul></p>
 
-            <h2>Music</h2>
+        <h2>Music</h2>
 
-            <p><ul type='disc'>
-                <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
-                <li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
-		<li><a href="https://michielkauwatjoe.bandcamp.com">BandCamp</a></li>
-            </ul></p>
+        <p><ul type='disc'>
+            <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
+            <li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
+    <li><a href="https://michielkauwatjoe.bandcamp.com">BandCamp</a></li>
+        </ul></p>
 
-            <h1>Exhibitions & Events</h1>
+        <h1>Exhibitions & Events</h1>
 
-            <p><ul type='disc'>
-		<li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
-		<li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
-		<li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
-		<li>Alphenart, May 10-12th, 2019</li>
-		<li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
-		<li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
-                <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
-                <li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
-                <li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
-                <li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
-                <li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
-                <li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
-                <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
-                <li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
-                <li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
-                <li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
-                <li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
-                <li>Stichting RAAF art market, Amsterdam, 2014</li>
-                <li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
-                <li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
-                <li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
-                <li>The Thought gallery, Amsterdam, 2008</li>
-                <li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
-                <li>Cultureel Platform Alphen aan den Rijn, 2006</li>
-                <li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
-                <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
-            </ul></p>
+        <p><ul type='disc'>
+    <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
+    <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
+    <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
+    <li>Alphenart, May 10-12th, 2019</li>
+    <li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
+    <li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
+            <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
+            <li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
+            <li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
+            <li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
+            <li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
+            <li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
+            <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
+            <li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
+            <li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
+            <li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
+            <li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
+            <li>Stichting RAAF art market, Amsterdam, 2014</li>
+            <li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
+            <li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
+            <li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
+            <li>The Thought gallery, Amsterdam, 2008</li>
+            <li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
+            <li>Cultureel Platform Alphen aan den Rijn, 2006</li>
+            <li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
+            <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
+        </ul></p>
 
-            <h1>Contact</h1>
+        <h1>Contact</h1>
 
-            <p><ul>
-                <li>michiel (at) kauwatjoe (dot) com</li>
-            </ul></p>
-
-	</div>
-
+        <p><ul>
+            <li>michiel (at) kauwatjoe (dot) com</li>
+        </ul></p>
+</div>
 </section>
 
 </body>
