Removing link, just a single pagRemoving link, just a single pagee

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <div id="menucontent">
 
 <div id="menucontent1">
-<div class="menuitem"><a href="/index.html"><h3>about 🐙</h3></a></div>
+<div class="menuitem">
+    <h3>about 🐙</h3>
+</div>
 </div>
 </div>
 </section>
