--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <p><ul type='disc'>
             <li><a href="http://www.instagram.com/michielkauwatjoe">Instagram</a></li>
-            <li><a href="http://www.behance.net/michielkauwatjoe">Behance</a></li>
+            <li><a href="http://www.behance.net/michielkauwatjoe">Bēhance</a></li>
         </ul></p>
 
         <h2>Music</h2>
