Renaming to style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michiel Kauw-A-Tjoe">
     <meta name="google-site-verification" content="xkAOrrpWLQfnf6ROsO-1UyfHGAxgrJ3pIQ_os16RnIE" />
     <link rel="shortcut icon" href="https://michielkauwatjoe.github.io/images/avatar.ico"/>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="canonical" href="https://www.michielkauwatjoe.com/">
     </script>
 </head>
