--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <h2>Software development</h2>
 
         <p><ul type='disc'>
-            <li><a href="http://www.github.com/michielkauwatjoe">GitHub</a></li>
-            <li><a href="http://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
+            <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
+            <li><a href="https://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
         </ul></p>
 
         <h2>Illustration</h2>
 
         <p><ul type='disc'>
-            <li><a href="http://www.instagram.com/michielkauwatjoe">Instagram</a></li>
-            <li><a href="http://www.behance.net/michielkauwatjoe">Bēhance</a></li>
+            <li><a href="https://www.instagram.com/michielkauwatjoe">Instagram</a></li>
+            <li><a href="https://www.behance.net/michielkauwatjoe">Bēhance</a></li>
         </ul></p>
 
         <h2>Music</h2>
