--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2>Illustration</h2>
 
         <p><ul type='disc'>
-            <li><a href="https://www.instagram.com/michielkauwatjoe">Instagram</a></li>
+            <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
             <li><a href="https://www.behance.net/michielkauwatjoe">Bēhance</a></li>
         </ul></p>
 
