Adding upcoming exhibition.

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 
     <h1>Projects</h1>
 
+        <h2>Illustration</h2>
+
+        <p><ul type='disc'>
+            <li><a href="https://www.behance.net/michielkauwatjoe">Bēhance</a></li>
+            <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
+        </ul></p>
+
         <h2>Software development</h2>
 
         <p><ul type='disc'>
             <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
             <li><a href="https://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
-        </ul></p>
-
-        <h2>Illustration</h2>
-
-        <p><ul type='disc'>
-            <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
-            <li><a href="https://www.behance.net/michielkauwatjoe">Bēhance</a></li>
         </ul></p>
 
         <h2>Music</h2>
@@ -66,6 +66,7 @@
         <h1>Exhibitions & Events</h1>
 
         <p><ul type='disc'>
+    <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Januari 6th - February 17th, 2022 (upcoming)</li>
     <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
     <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
     <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
