--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Illustration</h2>
 
         <p><ul type='disc'>
-            <li><a href="https://www.behance.net/michielkauwatjoe">Bēhance</a></li>
+            <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
             <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
         </ul></p>
 
