Updating exhibition data and adding Big Cartel link.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <h2>Illustration</h2>
 
         <p><ul type='disc'>
-            <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
             <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
+            <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
+            <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
         </ul></p>
 
         <h2>Software development</h2>
@@ -65,34 +66,35 @@
 
         <h1>Exhibitions & Events</h1>
 
-        <p><ul type='disc'>
-    <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 6th - February 17th, 2022 (upcoming)</li>
-    <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
-    <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
-    <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
-    <li>Alphenart, May 10-12th, 2019</li>
-    <li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
-    <li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
-            <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
-            <li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
-            <li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
-            <li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
-            <li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
-            <li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
-            <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
-            <li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
-            <li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
-            <li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
-            <li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
-            <li>Stichting RAAF art market, Amsterdam, 2014</li>
-            <li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
-            <li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
-            <li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
-            <li>The Thought gallery, Amsterdam, 2008</li>
-            <li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
-            <li>Cultureel Platform Alphen aan den Rijn, 2006</li>
-            <li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
-            <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
+        <p>
+        <ul type='disc'>
+        <li><b>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 28th - March 24th, 2022 (currently)</b></li>
+        <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
+        <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
+        <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
+        <li>Alphenart, May 10-12th, 2019</li>
+        <li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
+        <li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
+        <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
+        <li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
+        <li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
+        <li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
+        <li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
+        <li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
+        <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
+        <li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
+        <li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
+        <li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
+        <li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
+        <li>Stichting RAAF art market, Amsterdam, 2014</li>
+        <li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
+        <li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
+        <li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
+        <li>The Thought gallery, Amsterdam, 2008</li>
+        <li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
+        <li>Cultureel Platform Alphen aan den Rijn, 2006</li>
+        <li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
+        <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
         </ul></p>
 
         <h1>Contact</h1>
