--- a/index.html
+++ b/index.html
@@ -39,36 +39,23 @@
 <section id="content">
 <div class="contentcenter">
 
-    <h1>Projects</h1>
-
-        <h2>Illustration</h2>
+    <h1>Web</h1>
 
         <p><ul type='disc'>
-            <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
-            <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
-            <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
+        <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
+        <li><a href="https://michielkauwatjoe.bandcamp.com">BandCamp</a></li>
+        <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
+        <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
+        <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
+        <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
+        <li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
         </ul></p>
 
-        <h2>Software development</h2>
-
-        <p><ul type='disc'>
-            <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
-            <li><a href="https://stackoverflow.com/users/1966868/michiel-kauw-a-tjoe">stack<b>overflow</b></a></li>
-        </ul></p>
-
-        <h2>Music</h2>
-
-        <p><ul type='disc'>
-            <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
-            <li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
-    <li><a href="https://michielkauwatjoe.bandcamp.com">BandCamp</a></li>
-        </ul></p>
-
-        <h1>Exhibitions & Events</h1>
+    <h1>Exhibitions & Events</h1>
 
         <p>
         <ul type='disc'>
-        <li><b>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 28th - March 24th, 2022 (currently)</b></li>
+        <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 28th - March 24th, 2022</li>
         <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
         <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
         <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
@@ -97,10 +84,10 @@
         <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
         </ul></p>
 
-        <h1>Contact</h1>
+   <h1>Contact</h1>
 
         <p><ul>
-            <li>michiel (at) kauwatjoe (dot) com</li>
+            <li>info (at) michielkauwatjoe (dot) art</li>
         </ul></p>
 </div>
 </section>
