--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <p><ul type='disc'>
         <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
-        <li><a href="https://michielkauwatjoe.bandcamp.com">BandCamp</a></li>
+        <li><a href="https://clearwaterbay.bandcamp.com">BandCamp</a></li>
         <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
         <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
         <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
@@ -53,8 +53,7 @@
 
     <h1>Exhibitions & Events</h1>
 
-        <p>
-        <ul type='disc'>
+        <p></p><ul type='disc'>
         <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 28th - March 24th, 2022</li>
         <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
         <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
