--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <h1>Web</h1>
 
         <p><ul type='disc'>
+        <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
         <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
         <li><a href="https://clearwaterbay.bandcamp.com">BandCamp</a></li>
-        <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
         <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
         <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
         <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
@@ -54,7 +54,9 @@
     <h1>Exhibitions & Events</h1>
 
         <p></p><ul type='disc'>
-        <li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, January 28th - March 24th, 2022</li>
+        <li>current exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10
+2406 BV Alphen aan den Rijn, April 19th - May 17th, 2024</li>
+        <li>exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
         <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
         <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
         <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
