--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 
 <iframe width="450" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1964563543&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michielkauwatjoe" title="Impulse Response" target="_blank" style="color: #cccccc; text-decoration: none;">Impulse Response</a> · <a href="https://soundcloud.com/michielkauwatjoe/kaigai-niki" title="Kaigai Niki" target="_blank" style="color: #cccccc; text-decoration: none;">Kaigai Niki</a></div>
 
-<a href="https://michielkauwatjoe.bigcartel.com/product/rzarector"><img src="https://assets.bigcartel.com/product_images/388569615/IMG_0265.JPG" width=350"/></a>
-<a href="https://michielkauwatjoe.bigcartel.com/product/netscape-navigator"><img src="https://assets.bigcartel.com/product_images/327091920/netscape-navigator-detail-pv.jpg" width=350"/></a>
+<a href="https://michielkauwatjoe.bigcartel.com/product/rzarector"><img src="https://assets.bigcartel.com/product_images/388569615/IMG_0265.JPG" width=350/></a>
+<a href="https://michielkauwatjoe.bigcartel.com/product/netscape-navigator"><img src="https://assets.bigcartel.com/product_images/327091920/netscape-navigator-detail-pv.jpg" width=350/></a>
+
+<a href="https://michielkauwatjoe.bigcartel.com/product/paintbot-pro-xl"><img src="https://assets.bigcartel.com/product_images/388934289/P8220001.jpeg?auto=format&fit=max&w=1400" width=250/></a>
 
 <h1>Web</h1>
 
