Adding new profiles.

--- a/index.html
+++ b/index.html
@@ -41,60 +41,56 @@
 
 
 
-<iframe style="border: 0; width: 350px; height: 442px;" src="https://bandcamp.com/EmbeddedPlayer/track=394000613/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/transparent=true/" seamless><a href="https://clearwaterbay.bandcamp.com/track/kaigai-niki">Kaigai Niki by Impulse Response</a></iframe>
+<h1>Art</h1>
 
+<p><ul type='disc'>
+<li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
+<li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
+</ul></p>
 
-<iframe width="450" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1964563543&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michielkauwatjoe" title="Impulse Response" target="_blank" style="color: #cccccc; text-decoration: none;">Impulse Response</a> · <a href="https://soundcloud.com/michielkauwatjoe/kaigai-niki" title="Kaigai Niki" target="_blank" style="color: #cccccc; text-decoration: none;">Kaigai Niki</a></div>
+<h1>Music</h1>
 
-<a href="https://michielkauwatjoe.bigcartel.com/product/rzarector"><img src="https://assets.bigcartel.com/product_images/388569615/IMG_0265.JPG" width=350/></a>
-<a href="https://michielkauwatjoe.bigcartel.com/product/netscape-navigator"><img src="https://assets.bigcartel.com/product_images/327091920/netscape-navigator-detail-pv.jpg" width=350/></a>
+<p><ul type='disc'>
+<li><a href="https://clearwaterbay.bandcamp.com">BandCamp</a></li>
+<li><a href="https://music.apple.com/us/artist/impulse-response/1782476822">Apple Music</a></li>
+<li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
+<li><a href="https://open.spotify.com/artist/26sALTKu9R0G4xwdOGmvIM">Spotify</a></li>
+<li><a href="https://music.youtube.com/channel/UCc7hEVrgS1P9Xi5qpnV4-Cw">YT Music</a></li>
+<li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
+</ul></p>
 
-<a href="https://michielkauwatjoe.bigcartel.com/product/paintbot-pro-xl"><img src="https://assets.bigcartel.com/product_images/388934289/P8220001.jpeg?auto=format&fit=max&w=1400" width=250/></a>
+<h1>Exhibitions & Events</h1>
 
-<h1>Web</h1>
-
-        <p><ul type='disc'>
-        <li><a href="https://instagram.com/michielkauwatjoe">Instagram</a></li>
-        <li><a href="https://www.behance.net/michielkauwatjoe"><b>Bēhance</b></a></li>
-        <li><a href="https://clearwaterbay.bandcamp.com">BandCamp</a></li>
-        <li><a href="https://michielkauwatjoe.bigcartel.com">Big Cartel</a></li>
-        <li><a href="https://www.github.com/michielkauwatjoe">GitHub</a></li>
-        <li><a href="https://soundcloud.com/michielkauwatjoe">SoundCloud</a></li>
-        <li><a href="https://www.mixcloud.com/michielkauwatjoe">MixCloud</a></li>
-        </ul></p>
-
-    <h1>Exhibitions & Events</h1>
-
-        <p></p><ul type='disc'>
-        <li>Exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10, Alphen aan den Rijn, April 19th - May 17th, 2024</li>
-        <li>Exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
-        <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
-        <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
-        <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
-        <li>Alphenart, May 10-12th, 2019</li>
-        <li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
-        <li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
-        <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
-        <li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
-        <li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
-        <li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
-        <li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
-        <li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
-        <li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
-        <li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
-        <li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
-        <li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
-        <li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
-        <li>Stichting RAAF art market, Amsterdam, 2014</li>
-        <li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
-        <li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
-        <li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
-        <li>The Thought gallery, Amsterdam, 2008</li>
-        <li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
-        <li>Cultureel Platform Alphen aan den Rijn, 2006</li>
-        <li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
-        <li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
-        </ul></p>
+<p></p><ul type='disc'>
+<li>Exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10, Alphen aan den Rijn, April 19th - May 17th, 2024</li>
+<li>Exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
+<li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
+<li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
+<li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
+<li>Alphenart, May 10-12th, 2019</li>
+<li>Part One Exhibition at <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, September 14th, 2018</li>
+<li>Street Art Inside, <a href="https://www.heartgallery.info/news/item/39/street-art-inside-10-juni-tm-8-juli">Heart Gallery</a>, Hengelo, June 10th – July 8th, 2018</li>
+<li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/japanmarkt-2018">Japanmuseum SieboldHuis</a>, Leiden, 2018</b></li>
+<li>Oude Apotheek de Kwakzalver gallery, Bodegraven, May 5th, 2018</li>
+<li>“Bigger Than...” group exhibition, <a href="https://www.instagram.com/enfantterrible_shop/">Enfant Terrible</a> concept store and gallery, Rotterdam, April 6th – June 7th, 2018</li>
+<li>Mural and group exhibition for the Open Art Route, Alphen aan den Rijn, November 3rd – 5th, 2017</li>
+<li>Art market at the <a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, September 9th, 2017</li>
+<li>Art market at the <a href=https://www.heartgallery.info">HeArtlane Street Art Festival</a>, Hengelo, June 25th, 2017</li>
+<li>Japan Market, <a href="https://www.sieboldhuis.org/activiteiten/10de-japanmarkt">Japanmuseum SieboldHuis</a>, Leiden, 2017</b></li>
+<li>Street Art exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2016</li>
+<li>Japan Market, <a href="https://www.sieboldhuis.org/actueel/detail/japanmarkt_2016">Japanmuseum SieboldHuis</a>, Leiden, 2016</li>
+<li>Group exhibition, <a href="https://www.theatercastellum.nl">Theater Castellum</a>, Alphen aan den Rijn, 2015</li>
+<li><a href="https://www.swanmarket.nl">Swan Market</a> &amp; <a href="https://www.museummarket.nl">Museum Market</a>, Amsterdam, Rotterdam &amp; The Hague, 2015</li>
+<li>Stichting RAAF art market, Amsterdam, 2014</li>
+<li>Gomiyama pop-up store, Alphen aan den Rijn, 2014</li>
+<li><a href="http://www.vijfb.com">Vijf B</a>, exhibition space, Alphen aan den Rijn, 2010</li>
+<li><a href="https://www.staa.nl/">STAA</a> Open Ateliers, Alphen aan den Rijn, 2010</li>
+<li>The Thought gallery, Amsterdam, 2008</li>
+<li><a href="https://deaf07.v2.nl/">DEAF</a>, Rotterdam, 2007</li>
+<li>Cultureel Platform Alphen aan den Rijn, 2006</li>
+<li>Visual Sensations VJ'ing competition, Rotterdam, 2004</li>
+<li>Naked, electronic music events, Alphen aan den Rijn, 2001 – 2003</li>
+</ul></p>
 
    <h1>Contact</h1>
 
