--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google-site-verification" content="xkAOrrpWLQfnf6ROsO-1UyfHGAxgrJ3pIQ_os16RnIE" />
     <link rel="shortcut icon" href="https://michielkauwatjoe.github.io/images/avatar.ico"/>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="canonical" href="https://www.michielkauwatjoe.com/">
+    <link rel="canonical" href="https://www.michielkauwatjoe.art/">
     </script>
 </head>
 
@@ -26,7 +26,7 @@
 
 <div id="menucontent1">
 <div class="menuitem">
-    <h3>🐙</h3>
+    <h3></h3>
 </div>
 </div>
 </div>
