--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    <h1>Contact</h1>
 
         <p><ul>
-            <li>info (at) michielkauwatjoe (dot) art</li>
+            <li><a href="mailto:michiel@kauwatjoe.com">michiel@kauwatjoe.com</a></li>
         </ul></p>
 </div>
 </section>
