--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <h1>Exhibitions & Events</h1>
 
 <p></p><ul type='disc'>
-<li>Exhibition, <a href="https://www.stichtingalphenart.nl/">Galerie STAA</a>, Aarhof 41, Aarkade, Alphen aan den Rijn, februari 13th - May 20th, 2025</li>
-<li>Exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10, Alphen aan den Rijn, April 19th - May 17th, 2024</li>
-<li>Exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
+<li>Group exhibition, <a href="https://www.stichtingalphenart.nl/">Galerie STAA</a>, Aarhof 41, Aarkade, Alphen aan den Rijn, februari 13th - May 20th, 2025</li>
+<li>Solo exhibition, <a href="https://www.bibliotheekrijnenvenen.nl/activiteiten/exposities/expositiesoverzicht/MichielKauw-A-Tjoe.html">Bibliotheek Rijn & Venen (Centrum)</a>, Aarkade 10, Alphen aan den Rijn, April 19th - May 17th, 2024</li>
+<li>Solo exhibition, <a href="https://www.parkvilla.nl/">Parkvilla</a>, Cornelis Geellaan 2, Alphen aan den Rijn, January 28th - March 24th, 2022</li>
 <li>20 Vans, 30 Cans, <a href="https://www.powwowrotterdam.nl/">Pow Wow Rotterdam</a>, Afrikaanderpark Rotterdam, September 13th, 2020</li>
 <li><a href="https://fieldsofjoyfestival.com/">Fields of Joy</a>, Oldenzaal, July 6th, 2019</li>
 <li><a href="https://kingsofcolors.com/">Kings of Colors</a>, Den Bosch, June 15th, 2019</li>
